--- a/email/registration-confirmation.html
+++ b/email/registration-confirmation.html
@@ -165,30 +165,27 @@
       }
     </style>
   </head>
-
   <body data-gramm="false">
-    <!-- template -->
-    <!-- end of template -->
-    <!--  logo -->
+    <!-- template --><!-- end of template --><!--  logo -->
     <table
-      class="mobile"
       align="center"
-      cellspacing="0"
-      cellpadding="0"
-      border="0"
-      width="600"
-      style="margin: 0 auto; background-color: rgb(255, 255, 255);"
       bgcolor="#ffffff"
+      border="0"
+      cellpadding="0"
+      cellspacing="0"
+      class="mobile"
+      style="margin: 0 auto; background-color: rgb(255, 255, 255);"
+      width="600"
     >
       <tbody>
         <tr>
           <td align="left" valign="top" width="100%">
             <table
-              style="background-color: rgb(255, 255, 255);"
               bgcolor="#ffffff"
               border="0"
               cellpadding="0"
               cellspacing="0"
+              style="background-color: rgb(255, 255, 255);"
               width="100%"
             >
               <tbody>
@@ -213,7 +210,9 @@
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" height="12" valign="top" width="100%"></td>
+                  <td align="left" height="12" valign="top" width="100%">
+                    &nbsp;
+                  </td>
                 </tr>
               </tbody>
             </table>
@@ -221,8 +220,8 @@
         </tr>
       </tbody>
     </table>
-    <!--  end logo -->
-    <!-- main story -->
+    <!--  end logo --><!-- main story -->
+
     <table
       align="center"
       bgcolor="#ffffff"
@@ -280,6 +279,39 @@
                   <td
                     align="left"
                     class="fullCenter"
+                    style="line-height: 32px;"
+                    valign="top"
+                    width="100%"
+                  >
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    class="fullCenter"
+                    style="text-align: center;"
+                    valign="top"
+                    width="100%"
+                  >
+                    <span
+                      style="
+                        font-family: 'Microsoft JhengHei', 'Heiti TC',
+                          sans-serif;
+                        font-size: 20px;
+                        font-weight: bold;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        margin-top: 3px;
+                        color: #2b2b2b;
+                      "
+                      >2020年4月22日 星期3 | 時間：晚上7:45分 - 8:30分</span
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    class="fullCenter"
                     style="line-height: 16px;"
                     valign="top"
                     width="100%"
@@ -288,19 +320,19 @@
                   </td>
                 </tr>
                 <tr>
-                  <td class="fullCenter" valign="top" width="100%">
-                    <span
-                      style="
-                        font-family: 'Microsoft JhengHei', 'Heiti TC',
-                          sans-serif;
-                        font-size: 14px;
-                        line-height: 1.5;
-                        letter-spacing: 1px;
-                        margin-top: 3px;
-                        color: #2b2b2b;
-                      "
-                      >感謝您在抗疫同時，仍繼續<strong>與綠色和平一起關注氣候危機，出席「地球日環保紀錄片節」開幕紀錄片映後座談會</strong>，與三位嘉賓暢談環境議題！</span
-                    >
+                  <td
+                    class="fullCenter"
+                    style="text-align: center;"
+                    valign="top"
+                    width="100%"
+                  >
+                    <a
+                      href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NDBwZjBrMzBiZmE1bjMwc3BzdmF1aW1mamQgY2NoYW5AZ3JlZW5wZWFjZS5vcmc&amp;tmsrc=cchan%40greenpeace.org"
+                      target="_blank"
+                      ><img
+                        border="0"
+                        src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"
+                    /></a>
                   </td>
                 </tr>
                 <tr>
@@ -337,32 +369,216 @@
                   </td>
                 </tr>
                 <tr>
+                  <td
+                    class="fullCenter"
+                    style="text-align: center;"
+                    valign="top"
+                    width="100%"
+                  >
+                    <span
+                      style="
+                        font-family: 'Microsoft JhengHei', 'Heiti TC',
+                          sans-serif;
+                        font-size: 14px;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        margin-top: 3px;
+                        color: #2b2b2b;
+                      "
+                      >這是您進入Google Hangouts Meet映後座談會的<a
+                        href="https://bit.ly/GPHKMeet"
+                        target="_blank"
+                        >個人鏈結</a
+                      >。<br />
+                      如欲邀請好友參加是次映後座談會，請分享<a
+                        href="https://act.greenpeace.org/page/59146/petition/1"
+                        target="_blank"
+                        >此訪客報名鏈結</a
+                      >。
+                    </span>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    class="fullCenter"
+                    style="line-height: 32px;"
+                    valign="top"
+                    width="100%"
+                  >
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    style="width: 90%; margin: 0 auto; padding: 0px;"
+                  >
+                    <img
+                      src="https://secured-static.greenpeace.org/hk/Global/hk/artworks/ebulletins/2019/01/email-line.png"
+                      style="width: 100%;"
+                    />
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    class="fullCenter"
+                    style="line-height: 16px;"
+                    valign="top"
+                    width="100%"
+                  >
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
+                  <td class="fullCenter" valign="top" width="100%">
+                    <span
+                      style="
+                        font-family: 'Microsoft JhengHei', 'Heiti TC',
+                          sans-serif;
+                        font-size: 14px;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        margin-top: 3px;
+                        color: #2b2b2b;
+                      "
+                      >為確保您的網絡安全及座談會順利舉行，請注意以下事項：<br />
+                      - 如欲以手機或平板電腦進入座談會，請先下載應用程式（<a
+                        href="https://apps.apple.com/us/app/hangouts-meet-by-google/id1013231476"
+                        >IOS</a
+                      >、<a
+                        href="https://play.google.com/store/apps/details?id=com.google.android.apps.meetings"
+                        >Android</a
+                      >）<br />
+                      - 進入Google Hangouts Meet前請先登入Gmail<br />
+                      - 請勿將映後座談會的個人鏈結直接公開，或傳給其他人
+                    </span>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    class="fullCenter"
+                    style="line-height: 32px;"
+                    valign="top"
+                    width="100%"
+                  >
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    class="fullCenter"
+                    style="text-align: center;"
+                    valign="top"
+                    width="100%"
+                  >
+                    <span
+                      style="
+                        font-family: 'Microsoft JhengHei', 'Heiti TC',
+                          sans-serif;
+                        font-size: 20px;
+                        font-weight: bold;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        margin-top: 3px;
+                        color: #2b2b2b;
+                      "
+                      ><strong>綠色和平「地球日環保紀錄片節」</strong></span
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    class="fullCenter"
+                    style="line-height: 16px;"
+                    valign="top"
+                    width="100%"
+                  >
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    class="fullCenter"
+                    style="text-align: center;"
+                    valign="top"
+                    width="100%"
+                  >
+                    <span
+                      style="
+                        font-family: 'Microsoft JhengHei', 'Heiti TC',
+                          sans-serif;
+                        font-size: 14px;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        margin-top: 3px;
+                        color: #2b2b2b;
+                      "
+                      >2020年4月22日 星期3 | 時間：晚上7:45分 - 8:30分
+                    </span>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    class="fullCenter"
+                    style="line-height: 16px;"
+                    valign="top"
+                    width="100%"
+                  >
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    class="fullCenter"
+                    style="text-align: center;"
+                    valign="top"
+                    width="100%"
+                  >
+                    <span
+                      style="
+                        font-family: 'Microsoft JhengHei', 'Heiti TC',
+                          sans-serif;
+                        font-size: 14px;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        margin-top: 3px;
+                        color: #2b2b2b;
+                      "
+                      >嚴選五齣與氣候危機、環境破壞相關的紀錄片，將於4月22日直播放映，並在4月23至26日推介紀錄片及推供網站鏈結。</span
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    class="fullCenter"
+                    style="line-height: 32px;"
+                    valign="top"
+                    width="100%"
+                  >
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
                   <td class="fullCenter" valign="top" width="100%">
                     <p style="text-align: center; width: 100%;">
-                      <span
-                        style="
-                          font-family: 'Microsoft JhengHei', 'Heiti TC',
-                            sans-serif;
-                          font-size: 14px;
-                          line-height: 1.5;
-                          letter-spacing: 1px;
-                          margin-top: 3px;
-                          color: #2b2b2b;
-                        "
-                        >綠色和平希望收集您的意見，<br />好讓我們在不久的將來能舉辦更多合您心意的活動。</span
-                      ><br />
-                      <br /><strong
+                      <strong
                         ><a
-                          href="https://act.gp/38WH4KJ"
+                          href="https://act.gp/3eudGiq"
                           style="
                             width: 50%;
                             display: inline-block;
-                            background: #66cc00;
-                            padding: 12px 20px;
+                            background: #ff8100;
+                            padding: 8px 0px;
                             color: #ffffff;
                             font-family: 'Microsoft JhengHei', 'Heiti TC',
                               Helvetica, sans-serif;
-                            font-size: 16px;
+                            font-size: 15px;
                             font-weight: bold;
                             text-align: center;
                             letter-spacing: 0px;
@@ -370,7 +586,7 @@
                             border-radius: 2px;
                           "
                           target="_blank"
-                          >1分鐘填寫問卷</a
+                          >按此了解更多</a
                         ></strong
                       >
                     </p>
@@ -389,28 +605,11 @@
                 </tr>
                 <tr>
                   <td
-                    align="left"
-                    style="width: 90%; margin: 0 auto; padding: 0px;"
-                  >
-                    <img
-                      src="https://secured-static.greenpeace.org/hk/Global/hk/artworks/ebulletins/2019/01/email-line.png"
-                      style="width: 100%;"
-                    />
-                  </td>
-                </tr>
-                <tr>
-                  <td
-                    align="left"
                     class="fullCenter"
-                    style="line-height: 16px;"
+                    style="text-align: center;"
                     valign="top"
                     width="100%"
                   >
-                    &nbsp;
-                  </td>
-                </tr>
-                <tr>
-                  <td class="fullCenter" valign="top" width="100%">
                     <span
                       style="
                         font-family: 'Microsoft JhengHei', 'Heiti TC',
@@ -421,15 +620,15 @@
                         margin-top: 3px;
                         color: #2b2b2b;
                       "
-                      >再次感謝您的參與，請支持我們繼續以行動為環境帶來正面改變！</span
-                    >
+                      >分享給朋友
+                    </span>
                   </td>
                 </tr>
                 <tr>
                   <td
                     align="left"
                     class="fullCenter"
-                    style="line-height: 16px;"
+                    style="line-height: 32px;"
                     valign="top"
                     width="100%"
                   >
@@ -438,54 +637,58 @@
                 </tr>
                 <tr>
                   <td class="fullCenter" valign="top" width="100%">
-                    <span
-                      style="
-                        font-family: 'Microsoft JhengHei', 'Heiti TC',
-                          sans-serif;
-                        font-size: 13px;
-                        line-height: 2em;
-                        margin-top: 4px;
-                        color: #333;
-                      "
-                      >綠色和平資深項目主任<br />楊凱珊</span
-                    >
+                    <p style="text-align: center; width: 100%;">
+                      <strong
+                        ><a
+                          href="https://www.facebook.com/sharer/sharer.php?u=https://act.gp/3bfacy1"
+                          style="
+                            display: inline-block;
+                            background: rgb(59, 89, 182);
+                            padding: 8px 20px;
+                            color: #ffffff;
+                            font-family: 'Microsoft JhengHei', 'Heiti TC',
+                              Helvetica, sans-serif;
+                            font-size: 16px;
+                            font-weight: bold;
+                            text-align: center;
+                            letter-spacing: 0px;
+                            text-decoration: none;
+                            border-radius: 2px;
+                            margin-right: 10px;
+                          "
+                          target="_blank"
+                          >Facebook分享</a
+                        >
+                      </strong>
+                      <strong>
+                        <a
+                          href="https://api.whatsapp.com/send?text=綠色和平「地球日環保紀錄片節」開幕紀錄片分享會及映後座談會！即刻報名 https://act.gp/2RJ06Od"
+                          style="
+                            display: inline-block;
+                            background: #25d366;
+                            padding: 8px 20px;
+                            color: #ffffff;
+                            font-family: 'Microsoft JhengHei', 'Heiti TC',
+                              Helvetica, sans-serif;
+                            font-size: 16px;
+                            font-weight: bold;
+                            text-align: center;
+                            letter-spacing: 0px;
+                            text-decoration: none;
+                            border-radius: 2px;
+                          "
+                          target="_blank"
+                          >Whatsapp分享</a
+                        >
+                      </strong>
+                    </p>
                   </td>
                 </tr>
                 <tr>
                   <td
                     align="left"
                     class="fullCenter"
-                    style="line-height: 16px;"
-                    valign="top"
-                    width="100%"
-                  >
-                    &nbsp;
-                  </td>
-                </tr>
-                <tr>
-                  <td class="fullCenter" valign="top" width="100%">
-                    <span
-                      style="
-                        font-family: 'Microsoft JhengHei', 'Heiti TC',
-                          sans-serif;
-                        font-size: 13px;
-                        line-height: 2em;
-                        margin-top: 4px;
-                        color: #333;
-                      "
-                      >P.S. 此時此刻，綠色和平比以往更需要<a
-                        href="https://act.gp/3ahyQNr"
-                        target="_blank"
-                        >您的支持</a
-                      >，以維持公正獨立，幫助團隊持續氣候工作！</span
-                    >
-                  </td>
-                </tr>
-                <tr>
-                  <td
-                    align="left"
-                    class="fullCenter"
-                    style="line-height: 16px;"
+                    style="line-height: 32px;"
                     valign="top"
                     width="100%"
                   >
@@ -498,11 +701,10 @@
         </tr>
       </tbody>
     </table>
-    <!-- end main story -->
-    <!--
+    <!-- end main story --><!--
     end content bg
-    -->
-    <!-- social -->
+    --><!-- social -->
+
     <table
       align="center"
       bgcolor="#ffffff"
@@ -609,10 +811,10 @@
         </tr>
       </tbody>
     </table>
-    <!-- end social -->
-    <!--
+    <!-- end social --><!--
     footer
     -->
+
     <table
       align="center"
       bgcolor="#ffffff"
@@ -874,6 +1076,7 @@
     <!--
     end footer
     -->
+
     <p>&nbsp;</p>
   </body>
 </html>
