--- a/src/registration.html
+++ b/src/registration.html
@@ -61,7 +61,7 @@
     />
     <meta
       property="og:image"
-      content="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/ecology-sharelink.jpg?v=1555578641000"
+      content="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/20200416-earth-day-promotion.jpg"
     />
     <meta property="og:type" content="website" />
     <meta property="fb:app_id" content="192994240714848" />
@@ -251,8 +251,8 @@
                 class="px-4 py-8 border bg-white rounded shadow-md overflow-hidden form-container"
                 id="form-container"
               >
-                <div class="text-center mb-6">
-                  <p class="mb-2 text-sm">
+                <div class="form-header">
+                  <p class="text-sm">
                     立即報名「地球日環保紀錄片節」開幕紀錄片線上映後座談會
                   </p>
                 </div>
@@ -414,8 +414,8 @@
               </div>
               <div class="my-6">
                 <span class="mb-2 text-sm"
-                  >* By signing, you accept our Terms of Service and Privacy
-                  Policy. You can unsubscribe at any time.</span
+                  >*
+                  我願意收到綠色和平發送的通訊，讓我能掌握環保工作的最新脈動！我同意綠色和平按照個人資料政策與我聯絡，包括提供環保工作資訊及捐款呼籲等。</span
                 >
                 <br /><br />
                 <span class="my-6 text-sm"
@@ -424,116 +424,7 @@
                   Google Hangouts Meet 鏈結。</span
                 >
               </div>
-              <!--
-              <form class="form-body" style="display: none;">
-                <div class="mb-8 form-row text-center">
-                  <h2 class="text-2xl font-bold">Make a change</h2>
-                  <p class="text-base">
-                    Stop the destruction of the Arctic
-                  </p>
-                </div>
-                <div class="form-row">
-                  <div class="flex flex-wrap">
-                    <div class="w-full mb-4 md:mb-0 md:w-1/2 md:pr-1">
-                      <label class="form-label">
-                        姓氏 Last Name
-                      </label>
-                      <input
-                        class="form-input"
-                        type="text"
-                        placeholder="姓氏 Last Name"
-                      />
-                    </div>
-                    <div class="w-full md:w-1/2 md:pl-2">
-                      <label class="form-label">
-                        名字 First Name
-                      </label>
-                      <input
-                        class="form-input"
-                        type="text"
-                        placeholder="名字 First Name"
-                      />
-                    </div>
-                  </div>
-                </div>
-                <div class="form-row">
-                  <label for="" class="form-label">
-                    電郵地址 Email Address
-                  </label>
-                  <input
-                    type="text"
-                    class="form-input"
-                    placeholder="電郵地址 Email Address"
-                  />
-                </div>
-                <div class="form-row flex items-end">
-                    <div class="flex-none">
-                      <input
-                          class="w-16 form-input"
-                          type="text"
-                          placeholder="852"
-                          value="852"
-                        />
-                    </div>
-                    <div class="flex-none mb-3">
-                      <span
-                          class="mx-2 text-gray-400 pointer-events-none"
-                          >-</span
-                        >
-                    </div>
-                    <div class="flex-1">
-                      <label class="form-label">
-                        聯絡電話 Mobile Number
-                      </label>
-                      <input
-                        class="form-input"
-                        type="text"
-                        placeholder="聯絡電話 Mobile Number"
-                      />
-                    </div>
-                </div>
-                <div class="form-row">
-                  <label class="form-label">
-                    出生日期 Birthday
-                  </label>
-                  <div class="relative">
-                    <input
-                      class="form-input"
-                      type="text"
-                      placeholder="DD/MM/YYYY"
-                    />
-                    <div
-                      class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
-                    >
-                      <svg
-                        class="fill-current h-4 w-4"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 20 20"
-                      >
-                        <path
-                          d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                        />
-                      </svg>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-row">
-                  <label class="flex items-start">
-                    <input class="mr-2 leading-tight" checked type="checkbox" />
-                    <span class="form-label">
-                      <span class="block text-xs text-gray-600"
-                        >我願意收到綠色和平發送的通訊，讓我能掌握環保工作的最新脈動！我同意綠色和平按照<u>個人資料政策</u>與我聯絡，包括提供環保工作資訊及捐款呼籲等。</span
-                      >
-                    </span>
-                  </label>
-                </div>
-                <div class="form-row">
-                  <button class="form-button">
-                    Sign the petition
-                  </button>
-                </div>
-              </form>
-            --></div>
+            </div>
           </div>
         </div>
       </section>
